X3 C++ PluginFramework

2011-01-15, Zhang Yun Gui <rhcad@hotmail.com>

    * Remove cppunit 1.12.1 include files.

2011-01-13, Zhang Yun Gui <rhcad@hotmail.com>

    * Move Ix_UIConfig.h to pkg_AppUI. Fix doxyfile files.
    
    * ConfigXml v1.0.0.3: 
    * pkg_Core\Modules\ConfigXml\Cx_XmlSection.cpp: fix default return value of Cx_XmlSection::Setxxx.
    
2011-01-12, Zhang Yun Gui <rhcad@hotmail.com>

    * Rename text files(add .txt).
    * Replace tab char to space char in *.h and *.cpp.
    * Replace LPWSTR to wchar*
    * Move FileUtility/TextUtility/LogWriter/ to pkg_Core, Move Ix_ConfigDBFactory.h to Interface\Database\.
    
    * ConfigDB v1.0.0.2:
    * pkg_Utility\Modules\ConfigDB\Cx_ConfigFactory.cpp: Remove Ix_FileUtility.
        Open access connection readonly if file is readonly.
    * pkg_Utility\Interface\Database\Ix_ConfigDBFactory.h:
    * pkg_Utility\Modules\ConfigDB\Cx_CfgDatabase.h:
    * pkg_Utility\Modules\ConfigDB\Cx_CfgDatabase.cpp: Add readonly param in OpenConnection()
    
2011-01-09, Zhang Yun Gui <rhcad@hotmail.com>

    * ConfigXml v1.0.0.2:
    * pkg_Core\Modules\ConfigXml\ConfigXmlImpl.h: 
        automatic call CoInitializeEx to avoid caller forget it.
    * pkg_Core\Modules\ConfigXml\XmlUtil\XmlUtil.cpp: support MSXML6 and MSXML4.
    * add InitXMLDLL.h for applications to Ensure MSXML correctly initialized.

2011-01-06, Zhang Yun Gui <rhcad@hotmail.com>

    * Move VC++ workspace files (x3_vc*.sln) to 'projects' folder.
    * Release vesion 1.0.2 (tags/x3-1.0.2)

2011-01-06, Huang Ye <think.hy@gmail.com>

    * Add a tool in 'tools\MakePluginPerl'.
    It's a tool writing in perl for auto-generating plugin project.

2011-01-05, Zhang Yun Gui <rhcad@hotmail.com>

    * ChangeManager v1.0.0.2:
    * pkg_Core\Modules\ChangeManager\Cx_ChangeManager.h and cpp:
    change std::multimap to std::hash_multimap, remove my hash function.

    * PluginManager v1.0.0.2:
    * pkg_Core\Modules\PluginManager\Cx_ObjectFactory.h and cpp: