@@ -3,6 +3,7 @@ X3 C++ PluginFramework
 2011-01-15, Zhang Yun Gui <rhcad@hotmail.com>
 
     * Remove cppunit 1.12.1 include files.
+    * Replace StrCpyNW to lstrcpynW (because for VC6 shell32.dll no StrCpyNW entry point).
 
 2011-01-13, Zhang Yun Gui <rhcad@hotmail.com>
 
